--- a/index.html
+++ b/index.html
@@ -318,9 +318,8 @@
         <div class="properties-grid">
           <div class="property-card">
             <img src="/images/properties/tyler-ranch-home.webp"
-                 srcset="/images/properties/tyler-ranch-home-400w.webp 400w,
-                         /images/properties/tyler-ranch-home-800w.webp 800w"
-                 sizes="(max-width: 600px) 400px, (max-width: 1200px) 800px, 100vw"
+                 srcset="/images/properties/properties-tyler-ranch-home-400w.webp 400w"
+                 sizes="(max-width: 600px) 400px, 100vw"
                  alt="Tyler Ranch Home" loading="lazy">
             <div class="property-content">
               <h3>Tyler Ranch Home</h3>
@@ -339,9 +338,8 @@
           
           <div class="property-card">
             <img src="/images/properties/longview-victorian.webp"
-                 srcset="/images/properties/longview-victorian-400w.webp 400w,
-                         /images/properties/longview-victorian-800w.webp 800w"
-                 sizes="(max-width: 600px) 400px, (max-width: 1200px) 800px, 100vw"
+                 srcset="/images/properties/properties-longview-victorian-400w.webp 400w"
+                 sizes="(max-width: 600px) 400px, 100vw"
                  alt="Longview Victorian" loading="lazy">
             <div class="property-content">
               <h3>Longview Victorian</h3>
@@ -360,9 +358,8 @@
           
           <div class="property-card">
             <img src="/images/properties/jefferson-riverfront.webp"
-                 srcset="/images/properties/jefferson-riverfront-400w.webp 400w,
-                         /images/properties/jefferson-riverfront-800w.webp 800w"
-                 sizes="(max-width: 600px) 400px, (max-width: 1200px) 800px, 100vw"
+                 srcset="/images/properties/properties-jefferson-river-front-400w.webp 400w"
+                 sizes="(max-width: 600px) 400px, 100vw"
                  alt="Jefferson Riverfront" loading="lazy">
             <div class="property-content">
               <h3>Jefferson Riverfront</h3>
