--- a/properties/index.html
+++ b/properties/index.html
@@ -27,11 +27,11 @@
   <link rel="canonical" href="https://properties4creations.com/properties/">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="../favicon.ico">
-  <link rel="apple-touch-icon" href="../images/logo/brand-logo.png">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/images/logo/brand-logo.png">
 
   <!-- Web App Manifest -->
-  <link rel="manifest" href="../manifest.json">
+  <link rel="manifest" href="/manifest.json">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -108,8 +108,8 @@
   <header class="header-glass" role="banner">
     <div class="nav-container">
       <div class="brand-container">
-        <a href="../index.html" class="brand-link" aria-label="Properties 4 Creations - Home">
-          <img src="../images/logo/brand-logo.svg"
+        <a href="/index.html" class="brand-link" aria-label="Properties 4 Creations - Home">
+          <img src="/images/logo/brand-logo.svg"
                alt="Properties 4 Creations Logo"
                class="brand-logo">
           <span class="brand-text">Properties 4 Creations</span>
@@ -131,22 +131,22 @@
            aria-label="Main navigation">
         <ul class="nav-menu" role="menubar">
           <li role="none">
-            <a href="../index.html" class="nav-link" role="menuitem">Home</a>
+            <a href="/index.html" class="nav-link" role="menuitem">Home</a>
           </li>
           <li role="none">
-            <a href="index.html" class="nav-link" role="menuitem" aria-current="page">Properties</a>
+            <a href="/properties/index.html" class="nav-link" role="menuitem" aria-current="page">Properties</a>
           </li>
           <li role="none">
-            <a href="../about/index.html" class="nav-link" role="menuitem">About</a>
+            <a href="/about/index.html" class="nav-link" role="menuitem">About</a>
           </li>
           <li role="none">
-            <a href="../impact/index.html" class="nav-link" role="menuitem">Our Impact</a>
+            <a href="/impact/index.html" class="nav-link" role="menuitem">Our Impact</a>
           </li>
           <li role="none">
-            <a href="../resources/index.html" class="nav-link" role="menuitem">Resources</a>
+            <a href="/resources/index.html" class="nav-link" role="menuitem">Resources</a>
           </li>
           <li role="none">
-            <a href="../contact/index.html" class="nav-link" role="menuitem">Contact</a>
+            <a href="/contact/index.html" class="nav-link" role="menuitem">Contact</a>
           </li>
         </ul>
       </nav>
@@ -167,7 +167,11 @@
   <main id="main-content" role="main">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('../images/banners/hero-projects-banner.webp');" aria-labelledby="hero-heading">
+    <section class="hero" aria-labelledby="hero-heading">
+      <video autoplay muted loop class="hero-video">
+        <source src="/images/videos/hero-properties-banner.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
       <div class="container">
         <h1 id="hero-heading">Find Your Perfect Home</h1>
         <p>Quality, affordable housing for veterans and families across East Texas. All properties are fully renovated and ready for move-in.</p>
@@ -213,7 +217,7 @@
 
           <!-- Tyler Ranch Home -->
           <article class="property-card" data-bedrooms="3" data-location="Tyler">
-            <img src="../images/properties/tyler-ranch-home.webp"
+            <img src="/images/properties/tyler-ranch-home.webp"
                  alt="Tyler Ranch Home - charming 3 bedroom, 2 bathroom home"
                  loading="lazy">
             <div class="property-content">
@@ -235,7 +239,7 @@
 
           <!-- Longview Victorian -->
           <article class="property-card" data-bedrooms="4" data-location="Longview">
-            <img src="../images/properties/longview-victorian.webp"
+            <img src="/images/properties/longview-victorian.webp"
                  alt="Longview Victorian - historic 4 bedroom, 2.5 bathroom Victorian home"
                  loading="lazy">
             <div class="property-content">
@@ -257,7 +261,7 @@
 
           <!-- Jefferson Riverfront -->
           <article class="property-card" data-bedrooms="2" data-location="Jefferson">
-            <img src="../images/properties/jefferson-riverfront.webp"
+            <img src="/images/properties/jefferson-riverfront.webp"
                  alt="Jefferson Riverfront - cozy 2 bedroom, 1 bathroom waterfront home"
                  loading="lazy">
             <div class="property-content">
@@ -279,7 +283,7 @@
 
           <!-- Kemp Townhome -->
           <article class="property-card" data-bedrooms="1" data-location="Kemp">
-            <img src="../images/properties/kemp-townhome.webp"
+            <img src="/images/properties/kemp-townhome.webp"
                  alt="Kemp Townhome - modern 1 bedroom, 1 bathroom townhome"
                  loading="lazy">
             <div class="property-content">
@@ -300,7 +304,7 @@
 
           <!-- Marshall Historic Farmhouse -->
           <article class="property-card" data-bedrooms="3" data-location="Marshall">
-            <img src="../images/properties/marshall-historic-farm.webp"
+            <img src="/images/properties/marshall-historic-farm.webp"
                  alt="Marshall Historic Farmhouse - spacious 3 bedroom, 2 bathroom farmhouse"
                  loading="lazy">
             <div class="property-content">
@@ -322,7 +326,7 @@
 
           <!-- Mineola Modern Studio -->
           <article class="property-card" data-bedrooms="0" data-location="Mineola">
-            <img src="../images/properties/mineola-modern-studio.webp"
+            <img src="/images/properties/mineola-modern-studio.webp"
                  alt="Mineola Modern Studio - efficient studio apartment in downtown Mineola"
                  loading="lazy">
             <div class="property-content">
@@ -358,10 +362,10 @@
         <div class="cta-content">
           <h2 id="cta-heading">Ready to Apply?</h2>
           <p>Found a property that meets your needs? Start your application process today.</p>
-          <div class="cta-buttons">
-            <a href="../apply/index.html" class="btn btn-primary">Apply Now</a>
-            <a href="../contact/index.html" class="btn btn-secondary">Ask Questions</a>
-          </div>
+        <div class="cta-buttons">
+          <a href="/apply/index.html" class="btn btn-primary">Apply Now</a>
+          <a href="/contact/index.html" class="btn btn-secondary">Ask Questions</a>
+        </div>
         </div>
       </div>
     </section>
@@ -392,10 +396,10 @@
         <div class="footer-section">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="index.html">Properties</a></li>
-            <li><a href="../apply/index.html">Apply Now</a></li>
-            <li><a href="../resources/index.html">Resources</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/properties/index.html">Properties</a></li>
+            <li><a href="/apply/index.html">Apply Now</a></li>
+            <li><a href="/resources/index.html">Resources</a></li>
           </ul>
         </div>
 
@@ -410,8 +414,8 @@
       <div class="footer-bottom">
         <p>
           &copy; 2025 Properties 4 Creations.
-          <a href="../privacy/index.html">Privacy</a> |
-          <a href="../terms/index.html">Terms</a>
+          <a href="/privacy/index.html">Privacy</a> |
+          <a href="/terms/index.html">Terms</a>
         </p>
       </div>
 
@@ -419,8 +423,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="../js/main.js"></script>
-  <script src="../js/mobile-menu.js"></script>
-  <script src="../js/theme-toggle.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="/js/mobile-menu.js"></script>
+  <script src="/js/theme-toggle.js"></script>
 </body>
 </html>
