--- a/resources/index.html
+++ b/resources/index.html
@@ -268,7 +268,7 @@
           <h2>Local Housing Authorities</h2>
           <p>Public housing agencies and local housing authorities in East Texas.</p>
 
-          <div class="resources-grid">
+          <div class="resources-grid list-view">
             <div class="resource-card">
               <h3>Tyler Housing Authority</h3>
               <p>Public housing and Section 8 voucher administration for Smith County and surrounding areas.</p>
