more layout fixes

--- a/about/index.html
+++ b/about/index.html
@@ -150,10 +150,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('../images/banners/hero-about-us-banner-400w.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-about" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">About Properties 4 Creations</h1>
         <p>Veteran-owned and operated, we're committed to providing quality affordable housing solutions for East Texas communities.</p>
@@ -360,8 +360,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="../js/main.js"></script>
-  <script src="../js/mobile-menu.js"></script>
-  <script src="../js/theme-toggle.js"></script>
+  <script type="module" src="../js/main.js"></script>
+  <script type="module" src="../js/mobile-menu.js"></script>
+  <script type="module" src="../js/theme-toggle.js"></script>
 </body>
 </html>
