--- a/apply/index.html
+++ b/apply/index.html
@@ -127,10 +127,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('/images/banners/hero-contact-banner.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-apply" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">Apply for Housing</h1>
         <p>Take the first step towards quality, affordable housing. We accept Section 8 and HUD-VASH applications.</p>
@@ -360,8 +360,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/js/main.js"></script>
-  <script src="/js/mobile-menu.js"></script>
-  <script src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/mobile-menu.js"></script>
+  <script type="module" src="/js/theme-toggle.js"></script>
 </body>
 </html>
