--- a/faq/index.html
+++ b/faq/index.html
@@ -141,10 +141,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('/images/banners/hero-privacy-banner.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-faq" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">Frequently Asked Questions</h1>
         <p>Get answers to common questions about our housing services, application process, and veteran support programs.</p>
@@ -410,8 +410,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/js/main.js"></script>
-  <script src="/js/mobile-menu.js"></script>
-  <script src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/mobile-menu.js"></script>
+  <script type="module" src="/js/theme-toggle.js"></script>
 </body>
 </html>
