--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css?v=1.1">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -132,10 +132,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('images/banners/hero-home-banner-800w.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-home" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">Affordable Housing for Veterans & Families in East Texas</h1>
         <p>Veteran-Owned. Section 8 & HUD-VASH Approved. Quality Renovated Homes.</p>
@@ -327,8 +327,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="js/main.js"></script>
-  <script src="js/mobile-menu.js"></script>
-  <script src="js/theme-toggle.js"></script>
+  <script type="module" src="js/main.js"></script>
+  <script type="module" src="js/mobile-menu.js"></script>
+  <script type="module" src="js/theme-toggle.js"></script>
 </body>
 </html>
