--- a/terms/index.html
+++ b/terms/index.html
@@ -120,10 +120,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('/images/banners/hero-terms-banner.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-terms" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">Terms of Service</h1>
         <p>Please read these terms carefully before using our website or housing services.</p>
@@ -378,8 +378,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/js/main.js"></script>
-  <script src="/js/mobile-menu.js"></script>
-  <script src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/mobile-menu.js"></script>
+  <script type="module" src="/js/theme-toggle.js"></script>
 </body>
 </html>
