--- a/transparency/index.html
+++ b/transparency/index.html
@@ -126,10 +126,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('/images/banners/hero-transparency-banner.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-transparency" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">Complete Transparency</h1>
         <p>See exactly what our $30k+ renovations include, how we price our services, and our commitment to fair housing practices.</p>
@@ -515,8 +515,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/js/main.js"></script>
-  <script src="/js/mobile-menu.js"></script>
-  <script src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/mobile-menu.js"></script>
+  <script type="module" src="/js/theme-toggle.js"></script>
 </body>
 </html>
