--- a/contact/index.html
+++ b/contact/index.html
@@ -139,10 +139,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('/images/banners/hero-contact-banner.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-contact" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">Contact Us</h1>
         <p>Have questions about housing? We're here to help veterans and families find quality, affordable homes in East Texas.</p>
@@ -373,8 +373,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/js/main.js"></script>
-  <script src="/js/mobile-menu.js"></script>
-  <script src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/mobile-menu.js"></script>
+  <script type="module" src="/js/theme-toggle.js"></script>
 </body>
 </html>
