--- a/impact/index.html
+++ b/impact/index.html
@@ -124,10 +124,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('/images/banners/hero-impact-banner.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-impact" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">Our Impact in East Texas</h1>
         <p>Real stories of transformation, community investment, and housing stability for veterans and families across East Texas.</p>
@@ -412,11 +412,11 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/js/main.js"></script>
-  <script src="/js/mobile-menu.js"></script>
-  <script src="/js/theme-toggle.js"></script>
-  <script src="/js/comparison-slider.js"></script>
-  <script>
+  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/mobile-menu.js"></script>
+  <script type="module" src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/comparison-slider.js"></script>
+  <script type="module">
     // Initialize comparison sliders on impact page
     document.addEventListener('DOMContentLoaded', function() {
       // Initialize sliders for the gallery items
