--- a/privacy/index.html
+++ b/privacy/index.html
@@ -120,10 +120,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('/images/banners/hero-privacy-banner.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-privacy" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">Privacy Policy</h1>
         <p>Your privacy and data security are important to us. Learn how we collect, use, and protect your personal information.</p>
@@ -413,8 +413,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/js/main.js"></script>
-  <script src="/js/mobile-menu.js"></script>
-  <script src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/mobile-menu.js"></script>
+  <script type="module" src="/js/theme-toggle.js"></script>
 </body>
 </html>
