--- a/resources/index.html
+++ b/resources/index.html
@@ -120,10 +120,10 @@
   </header>
 
   <!-- Main Content -->
-  <main id="main-content" role="main">
+  <main id="main-content" role="main" style="padding-top: 80px;">
 
     <!-- Hero Section -->
-    <section class="hero" style="background-image: url('/images/banners/hero-privacy-banner.webp');" aria-labelledby="hero-heading">
+    <section class="hero hero-resources" aria-labelledby="hero-heading">
       <div class="container">
         <h1 id="hero-heading">Housing Resources</h1>
         <p>Comprehensive guide to housing assistance programs, veteran benefits, and local support services in East Texas.</p>
@@ -405,8 +405,8 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/js/main.js"></script>
-  <script src="/js/mobile-menu.js"></script>
-  <script src="/js/theme-toggle.js"></script>
+  <script type="module" src="/js/main.js"></script>
+  <script type="module" src="/js/mobile-menu.js"></script>
+  <script type="module" src="/js/theme-toggle.js"></script>
 </body>
 </html>
