--- a/about/index.html
+++ b/about/index.html
@@ -160,6 +160,26 @@
       </div>
     </section>
 
+    <!-- Trust Stats -->
+    <section class="trust-stats" style="background: var(--color-primary-navy); padding: 2rem 0; color: white;">
+      <div class="container">
+        <div style="display: flex; justify-content: space-around; flex-wrap: wrap; gap: 2rem; text-align: center;">
+          <div>
+            <span style="font-size: 2rem; font-weight: 700; color: var(--color-primary-gold);">100%</span>
+            <p style="margin: 0; font-size: 0.9rem; color: #ddd;">Veteran Owned</p>
+          </div>
+          <div>
+            <span style="font-size: 2rem; font-weight: 700; color: var(--color-primary-gold);">2024</span>
+            <p style="margin: 0; font-size: 0.9rem; color: #ddd;">Established</p>
+          </div>
+          <div>
+            <span style="font-size: 2rem; font-weight: 700; color: var(--color-primary-gold);">East Texas</span>
+            <p style="margin: 0; font-size: 0.9rem; color: #ddd;">Locally Focused</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Mission & Vision -->
     <section class="mission-section" aria-labelledby="mission-heading">
       <div class="container">
