updated exsisting pages layout/css

--- a/about/index.html
+++ b/about/index.html
@@ -210,7 +210,7 @@
             <p>That's why we started Properties 4 Creations. As a veteran-owned and operated company, we bring personal understanding and professional expertise to every property we renovate and every family we serve. We're not just in the business of housing - we're in the business of building stronger communities.</p>
           </div>
           <div class="story-image">
-            <img src="/images/our-work-gallery/our-work-painting-dog-400w.webp" alt="Our team working on property renovations" loading="lazy">
+            <img src="/images/banners/hero-about-us-banner-400w.webp" alt="Our team working on property renovations" loading="lazy">
           </div>
         </div>
       </div>
@@ -245,11 +245,6 @@
             <div class="value-icon">🔧</div>
             <h3>Excellence</h3>
             <p>We strive for excellence in every renovation, every interaction, and every home we provide.</p>
-          </div>
-          <div class="value-card">
-            <div class="value-icon">❤️</div>
-            <h3>Compassion</h3>
-            <p>We approach every situation with empathy, understanding the challenges our residents face.</p>
           </div>
         </div>
       </div>
@@ -287,7 +282,7 @@
         <div class="team-grid">
           <div class="team-member">
             <div class="member-photo">
-              <img src="/images/icons/034-soldier.png" alt="Veteran leader avatar" loading="lazy">
+              <img src="/images/about/about-us-team-owner.png" alt="Veteran leader headshot" loading="lazy">
             </div>
             <h3>Veteran Founders</h3>
             <p>Co-Founders & Co-Owners</p>
@@ -295,7 +290,7 @@
           </div>
           <div class="team-member">
             <div class="member-photo">
-              <img src="/images/icons/009-quality-control.png" alt="Quality assurance specialist avatar" loading="lazy">
+              <img src="/images/about/about-us-team-headshot.png" alt="Renovation team headshot" loading="lazy">
             </div>
             <h3>Renovation Team</h3>
             <p>Property Specialists</p>
@@ -303,7 +298,7 @@
           </div>
           <div class="team-member">
             <div class="member-photo">
-              <img src="/images/icons/016-social-care.png" alt="Customer service specialist avatar" loading="lazy">
+              <img src="/images/about/about-us-team-customer-care.png" alt="Customer service team headshot" loading="lazy">
             </div>
             <h3>Resident Services</h3>
             <p>Customer Care Team</p>
