Revert "updated exsisting pages layout/css"
This reverts commit 7375f60121ccf66d0c4d75bc817f74e3f57310c5.

--- a/impact/index.html
+++ b/impact/index.html
@@ -128,11 +128,6 @@
 
     <!-- Hero Section -->
     <section class="hero hero-impact" aria-labelledby="hero-heading">
-      <video autoplay muted loop class="hero-video">
-        <source src="/images/videos/hero-impact-banner.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </source>
-      </video>
       <div class="container">
         <h1 id="hero-heading">Our Impact in East Texas</h1>
         <p>Real stories of transformation, community investment, and housing stability for veterans and families across East Texas.</p>
@@ -140,101 +135,114 @@
     </section>
 
     <!-- Impact Stats -->
-    <section class="impact-stats-section">
+    <section class="stats impact-stats" aria-labelledby="impact-stats-heading">
       <div class="container">
-        <h2 class="h2 text-center" style="color: white; margin-bottom: 3rem;">Our Impact by the Numbers</h2>
-        <div class="impact-grid">
-          <div class="impact-card">
-            <span class="stat-number">150+</span>
-            <span class="stat-label">Families Housed</span>
+        <h2 id="impact-stats-heading" class="text-center">Numbers That Matter</h2>
+        <div class="stats-grid">
+          <div class="stat-item">
+            <div class="stat-number">150+</div>
+            <div class="stat-label">Families Housed</div>
           </div>
-          <div class="impact-card">
-            <span class="stat-number">75+</span>
-            <span class="stat-label">Veterans Served</span>
+          <div class="stat-item">
+            <div class="stat-number">75+</div>
+            <div class="stat-label">Veterans Served</div>
           </div>
-          <div class="impact-card">
-            <span class="stat-number">$4.5M+</span>
-            <span class="stat-label">Total Investment</span>
+          <div class="stat-item">
+            <div class="stat-number">$4.5M+</div>
+            <div class="stat-label">Total Investment</div>
           </div>
-          <div class="impact-card">
-            <span class="stat-number">98%</span>
-            <span class="stat-label">Satisfaction Rate</span>
+          <div class="stat-item">
+            <div class="stat-number">98%</div>
+            <div class="stat-label">Satisfaction Rate</div>
           </div>
-          <div class="impact-card">
-            <span class="stat-number">25+</span>
-            <span class="stat-label">Properties Renovated</span>
+          <div class="stat-item">
+            <div class="stat-number">25+</div>
+            <div class="stat-label">Properties Renovated</div>
           </div>
-          <div class="impact-card">
-            <span class="stat-number">$30k+</span>
-            <span class="stat-label">Per Property Investment</span>
+          <div class="stat-item">
+            <div class="stat-number">$30k+</div>
+            <div class="stat-label">Per Property Investment</div>
           </div>
         </div>
       </div>
     </section>
 
     <!-- Success Stories -->
-    <section class="stories-section">
+    <section class="testimonials" aria-labelledby="testimonials-heading">
       <div class="container">
-        <h2 class="h2 text-center" style="margin-bottom: 3rem;">Real Stories</h2>
-        <div class="stories-grid">
-          <article class="story-card">
-            <img src="/images/properties/card-impact-rodriguez-family-400w.webp" alt="The Rodriguez Family" class="story-image">
-            <div class="story-content">
-              <h3>The Rodriguez Family</h3>
-              <p class="story-quote">"After years of struggling to find stable housing that would accept our Section 8 voucher, Properties 4 Creations not only accepted our voucher but provided us with a beautifully renovated home that feels like ours. The attention to detail and understanding of veterans' needs made all the difference for our family."</p>
-              <p><strong>Sergeant Rodriguez & Family</strong><br>U.S. Army Veteran • Tyler, TX</p>
-            </div>
-          </article>
-          
-          <article class="story-card">
-            <img src="/images/our-work-gallery/our-work-detailed-measuring-400w.webp" alt="Single mother and her children" class="story-image">
-            <div class="story-content">
-              <h3>Maria G.</h3>
-              <p class="story-quote">"As a single mother working two jobs, I never thought I'd find affordable housing that was also safe and updated. Properties 4 Creations didn't just give me a place to live—they gave my children a stable home environment where they could thrive. The renovated kitchen and bathroom have made such a difference in our daily lives."</p>
-              <p><strong>Single Mother • Longview, TX</strong></p>
-            </div>
-          </article>
+        <h2 id="testimonials-heading" class="text-center">Success Stories</h2>
+        <div class="testimonials-grid">
 
-          <article class="story-card">
-            <img src="/images/our-work-gallery/our-work-remodeling-400w.webp" alt="Senior veteran couple" class="story-image">
-            <div class="story-content">
-              <h3>Chief Martinez & Wife</h3>
-              <p class="story-quote">"The ADA accessibility features in our new home have given us back our independence. No more struggling with stairs or outdated fixtures. Properties 4 Creations understood our needs as aging veterans and delivered beyond our expectations. We're finally in a home that works for us."</p>
-              <p><strong>U.S. Navy Veteran • Marshall, TX</strong></p>
+          <div class="testimonial-card">
+            <div class="testimonial-image">
+              <img src="/images/properties/card-impact-rodriguez-family-400w.webp" alt="Rodriguez family in their new home" loading="lazy">
             </div>
-          </article>
+            <blockquote class="testimonial-quote">
+              "After years of struggling to find stable housing that would accept our Section 8 voucher, Properties 4 Creations not only accepted our voucher but provided us with a beautifully renovated home that feels like ours. The attention to detail and understanding of veterans' needs made all the difference for our family."
+            </blockquote>
+            <div class="testimonial-author">
+              <strong>Sergeant Rodriguez & Family</strong><br>
+              U.S. Army Veteran • Tyler, TX
+            </div>
+          </div>
 
-          <article class="story-card">
-            <img src="/images/our-work-gallery/our-work-painting-dog-400w.webp" alt="Young veteran with service dog" class="story-image">
-            <div class="story-content">
-              <h3>Corporal Thompson</h3>
-              <p class="story-quote">"Finding pet-friendly housing that accepted HUD-VASH was nearly impossible until Properties 4 Creations. Their understanding of veterans' needs, including service animals, made the transition smooth. My service dog and I finally have a place we can call home."</p>
-              <p><strong>U.S. Marine Veteran • Jefferson, TX</strong></p>
+          <div class="testimonial-card">
+            <div class="testimonial-image">
+              <img src="/images/our-work-gallery/our-work-detailed-measuring-400w.webp" alt="Single mother and her children" loading="lazy">
             </div>
-          </article>
+            <blockquote class="testimonial-quote">
+              "As a single mother working two jobs, I never thought I'd find affordable housing that was also safe and updated. Properties 4 Creations didn't just give me a place to live—they gave my children a stable home environment where they could thrive. The renovated kitchen and bathroom have made such a difference in our daily lives."
+            </blockquote>
+            <div class="testimonial-author">
+              <strong>Maria G.</strong><br>
+              Single Mother • Longview, TX
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="testimonial-image">
+              <img src="/images/our-work-gallery/our-work-remodeling-400w.webp" alt="Senior veteran couple" loading="lazy">
+            </div>
+            <blockquote class="testimonial-quote">
+              "The ADA accessibility features in our new home have given us back our independence. No more struggling with stairs or outdated fixtures. Properties 4 Creations understood our needs as aging veterans and delivered beyond our expectations. We're finally in a home that works for us."
+            </blockquote>
+            <div class="testimonial-author">
+              <strong>Chief Martinez & Wife</strong><br>
+              U.S. Navy Veteran • Marshall, TX
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <div class="testimonial-image">
+              <img src="/images/our-work-gallery/our-work-painting-dog-400w.webp" alt="Young veteran with service dog" loading="lazy">
+            </div>
+            <blockquote class="testimonial-quote">
+              "Finding pet-friendly housing that accepted HUD-VASH was nearly impossible until Properties 4 Creations. Their understanding of veterans' needs, including service animals, made the transition smooth. My service dog and I finally have a place we can call home."
+            </blockquote>
+            <div class="testimonial-author">
+              <strong>Corporal Thompson</strong><br>
+              U.S. Marine Veteran • Jefferson, TX
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
 
     <!-- Before/After Gallery -->
-    <section class="comparison-section">
+    <section class="gallery-section" aria-labelledby="gallery-heading">
       <div class="container">
-        <h2 class="h2 text-center" style="margin-bottom: 3rem;">Transformation Gallery</h2>
+        <h2 id="gallery-heading" class="text-center">Transformation Gallery</h2>
         <p class="gallery-intro text-center">See the dramatic difference our $30k+ renovations make in East Texas communities</p>
 
         <div class="gallery-grid">
+
           <!-- Kitchen Before/After -->
           <div class="gallery-item">
             <h3>Kitchen Renovation</h3>
-            <div class="comparison-wrapper">
-              <div class="img-comp-container">
-                <div class="img-comp-img">
-                  <img src="/images/before-after-comparison/projects-before-kitchen-400w.webp" alt="Kitchen before renovation - outdated and worn">
-                </div>
-                <div class="img-comp-img">
-                  <img src="/images/before-after-comparison/projects-after-kitchen-400w.webp" alt="Kitchen after renovation - modern and functional">
-                </div>
-              </div>
+            <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-kitchen-400w.webp" data-after="/images/before-after-comparison/projects-after-kitchen-400w.webp">
+              <img src="/images/before-after-comparison/projects-before-kitchen-400w.webp" alt="Kitchen before renovation - outdated and worn" class="before-image">
+              <img src="/images/before-after-comparison/projects-after-kitchen-400w.webp" alt="Kitchen after renovation - modern and functional" class="after-image" style="display: none;">
             </div>
             <p>Complete kitchen overhaul including new cabinets, granite countertops, stainless steel appliances, and modern lighting.</p>
           </div>
@@ -242,15 +250,9 @@
           <!-- Bathroom Before/After -->
           <div class="gallery-item">
             <h3>Bathroom Renovation</h3>
-            <div class="comparison-wrapper">
-              <div class="img-comp-container">
-                <div class="img-comp-img">
-                  <img src="/images/before-after-comparison/projects-before-bathroom-400w.webp" alt="Bathroom before renovation - outdated fixtures">
-                </div>
-                <div class="img-comp-img">
-                  <img src="/images/before-after-comparison/projects-after-bathroom-400w.webp" alt="Bathroom after renovation - modern and accessible">
-                </div>
-              </div>
+            <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-bathroom-400w.webp" data-after="/images/before-after-comparison/projects-after-bathroom-400w.webp">
+              <img src="/images/before-after-comparison/projects-before-bathroom-400w.webp" alt="Bathroom before renovation - outdated fixtures" class="before-image">
+              <img src="/images/before-after-comparison/projects-after-bathroom-400w.webp" alt="Bathroom after renovation - modern and accessible" class="after-image" style="display: none;">
             </div>
             <p>Full bathroom renovation with walk-in showers, modern vanities, ADA-compliant features, and premium finishes.</p>
           </div>
@@ -258,15 +260,9 @@
           <!-- Living Room Before/After -->
           <div class="gallery-item">
             <h3>Living Area Update</h3>
-            <div class="comparison-wrapper">
-              <div class="img-comp-container">
-                <div class="img-comp-img">
-                  <img src="/images/before-after-comparison/projects-before-living-room-400w.webp" alt="Living room before renovation - worn and outdated">
-                </div>
-                <div class="img-comp-img">
-                  <img src="/images/before-after-comparison/projects-after-living-room-400w.webp" alt="Living room after renovation - bright and welcoming">
-                </div>
-              </div>
+            <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-living-room-400w.webp" data-after="/images/before-after-comparison/projects-after-living-room-400w.webp">
+              <img src="/images/before-after-comparison/projects-before-living-room-400w.webp" alt="Living room before renovation - worn and outdated" class="before-image">
+              <img src="/images/before-after-comparison/projects-after-living-room-400w.webp" alt="Living room after renovation - bright and welcoming" class="after-image" style="display: none;">
             </div>
             <p>Living area transformation with new flooring, fresh paint, updated lighting, and modern window treatments.</p>
           </div>
@@ -274,18 +270,13 @@
           <!-- Front Porch Before/After -->
           <div class="gallery-item">
             <h3>Exterior Enhancement</h3>
-            <div class="comparison-wrapper">
-              <div class="img-comp-container">
-                <div class="img-comp-img">
-                  <img src="/images/before-after-comparison/projects-before-front-porch-400w.webp" alt="Front porch before renovation - deteriorated and unsafe">
-                </div>
-                <div class="img-comp-img">
-                  <img src="/images/before-after-comparison/projects-after-front-porch-400w.webp" alt="Front porch after renovation - safe and welcoming">
-                </div>
-              </div>
+            <div class="comparison-slider" data-before="/images/before-after-comparison/projects-before-front-porch-400w.webp" data-after="/images/before-after-comparison/projects-after-front-porch-400w.webp">
+              <img src="/images/before-after-comparison/projects-before-front-porch-400w.webp" alt="Front porch before renovation - deteriorated and unsafe" class="before-image">
+              <img src="/images/before-after-comparison/projects-after-front-porch-400w.webp" alt="Front porch after renovation - safe and welcoming" class="after-image" style="display: none;">
             </div>
             <p>Curb appeal improvement with new porch, railings, lighting, and landscaping to welcome residents home.</p>
           </div>
+
         </div>
       </div>
     </section>
@@ -358,7 +349,7 @@
     <section class="cta-section" aria-labelledby="cta-heading">
       <div class="container">
         <div class="cta-content">
-          <h2 id="cta-heading" class="h2">Be Part of Our Impact</h2>
+          <h2 id="cta-heading">Be Part of Our Impact</h2>
           <p>Join the growing number of families who have found stability and hope through Properties 4 Creations. Every home we renovate strengthens our community.</p>
           <div class="cta-buttons">
             <a href="/apply/" class="btn btn-primary">Apply for Housing</a>
